force-app/main/default/objects/aecm__Architecture_Domain__c/aecm__Architecture_Domain__c.object-meta.xml
<CustomObject>
    <description>Top level L1 for an enterprise architecture domain management model. Sales Systems, is an example of an architecture domain. Container for domain strategies and collaborations, and relationships to capabilities the domain serves.</description>
    <label>Architecture Domain</label>
    <nameField>
        <label>Domain Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Architecture Domains</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>