force-app/main/default/objects/aecm__Architecture_Domain__c/fields/aecm__Active__c.field-meta.xml
<CustomField>
    <fullName>aecm__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>When unchecked, this domain will not show on reports or other calculations.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>