force-app/main/default/objects/aecm__Architecture_Domain__c/fields/aecm__Description__c.field-meta.xml
<CustomField>
    <fullName>aecm__Description__c</fullName>
    <description>Provides a container for a general description of the architecture domain.</description>
    <inlineHelpText>Describe the general objectives of this architecture domain.</inlineHelpText>
    <label>Description</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>