force-app/main/default/objects/aecm__Architecture_Domain__c/fields/aecm__Maturity_Status__c.field-meta.xml
<CustomField>
    <fullName>aecm__Maturity_Status__c</fullName>
    <description>Sets the maturity status for the architecture domain.</description>
    <inlineHelpText>Indicates the maturity status of the domain.</inlineHelpText>
    <label>Maturity Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Evolving</fullName>
            </value>
            <value>
                <fullName>Optimizing</fullName>
            </value>
            <value>
                <fullName>Stable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>