force-app/main/default/objects/aecm__Architecture_Domain__c/fields/aecm__Related_Capabilities__c.field-meta.xml
<CustomField>
    <fullName>aecm__Related_Capabilities__c</fullName>
    <label>Capabilities</label>
    <summaryForeignKey>aecm__Architecture_Domain_Capability__c.aecm__Architecture_Domain__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>