force-app/main/default/objects/aecm__Architecture_Domain__c/fields/aecm__Strategies__c.field-meta.xml
<CustomField>
    <fullName>aecm__Strategies__c</fullName>
    <label>Strategies</label>
    <summaryForeignKey>aecm__Architecture_Strategy__c.aecm__Architecture_Domain__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>