force-app/main/default/objects/aecm__Architecture_Domain__c/fields/aecm__TCO__c.field-meta.xml
<CustomField>
    <fullName>aecm__TCO__c</fullName>
    <inlineHelpText>Calculated total cost of ownership across all components of this domain.</inlineHelpText>
    <label>TCO</label>
    <summarizedField>aecm__Architecture_Component__c.aecm__TCO__c</summarizedField>
    <summaryFilterItems>
        <field>aecm__Architecture_Component__c.aecm__Deprecation_Status__c</field>
        <operation>notEqual</operation>
        <value>Deprecated</value>
    </summaryFilterItems>
    <summaryForeignKey>aecm__Architecture_Component__c.aecm__Primary_Architecture_Domain__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>