force-app/main/default/objects/aecm__Architecture_Domain__c/listViews/aecm__Active_Architecture_Domains.listView-meta.xml
<ListView>
    <fullName>aecm__Active_Architecture_Domains</fullName>
    <columns>NAME</columns>
    <columns>aecm__Related_Capabilities__c</columns>
    <columns>aecm__Strategies__c</columns>
    <columns>aecm__Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>aecm__Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Architecture Domains</label>
</ListView>