force-app/main/default/objects/aecm__Architecture_Domain__c/listViews/aecm__Kanban_By_Maturity_Stage.listView-meta.xml
<ListView>
    <fullName>aecm__Kanban_By_Maturity_Stage</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Kanban By Maturity Stage</label>
</ListView>